added Types, and a basic scraper

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "name": "liquipediascraper",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "devDependencies": {
     "typescript": "^5.5.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "scrape": "npm run build && node dist/scraper.js"
+    "scrape": "npm run build && node dist/app.js"
   },
   "author": "",
   "license": "ISC",
